# src

actions_py/: package.xml  setup.py
actions_py/actions_py/: count_until_client.py  count_until_server.py  move_robot_client.py  move_robot_server.py  (+1 more)
arduinobot_controller/: CMakeLists.txt  package.xml
arduinobot_description/: CMakeLists.txt  package.xml
arduinobot_moveit/: CMakeLists.txt  package.xml
arduinobot_msgs/: CMakeLists.txt
arduinobot_utils/: package.xml
components_py/: setup.py
drone/: package.xml  setup.py
drone/drone/: orbit.py  (+11 more)
drone_bringup/: CMakeLists.txt  package.xml
drone_interfaces/: CMakeLists.txt  package.xml
drone_interfaces/action/: GoToWaypoint.action  ReadyDrone.action
drone_interfaces/msg/: LocalFrameOffsets.msg  LocalWaypoint.msg
drone_interfaces/srv/: CommandVelocity.srv
drone_yolo/: package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.sh
irl_drone/: package.xml  setup.cfg  setup.py
lifecycle_py/: package.xml  setup.py
log/: latest_build
mavros2/: package.xml  setup.cfg  setup.py
mavros_pkg.py/: package.xml  setup.cfg  setup.py
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_description/: CMakeLists.txt  package.xml
my_robot_interfaces/: CMakeLists.txt  package.xml
new_cpp_pkg/: CMakeLists.txt
new_py_pkg/: package.xml  setup.cfg  setup.py
turtle_interfaces/: CMakeLists.txt  package.xml
turtlesim_bringup/: CMakeLists.txt  package.xml
turtlesim_bringup/launch/: turtlesim_app.launch.py
turtlesim_catch_them_all/: package.xml  setup.py
yolobot_recognition/: CMakeLists.txt
(+130 files in other folders)
